# python-cli-crud

./: .env  README.md  package-lock.json  pyproject.toml  requirements.txt
app/: cli.py  crud.py  models.py
