[tool.poetry]
name = "python-cli-crud"
version = "0.1.0"
description = "CLI application for managing products with full CRUD operations using Python, SQLAlchemy, and PostgreSQL."
authors = ["Fatima Zaghlol <fatima.a.zaghlol@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []   # optional, خليها فارغة
package-mode = false   # هذا السطر يمنع تثبيت المشروع نفسه
# لا نضع packages هنا لتجنب مشاكل التثبيت
# poetry ستتعامل مع dependencies فقط

[tool.poetry.dependencies]
python = "^3.14"
SQLAlchemy = "2.0.48"
psycopg2-binary = "2.9.11"
python-dotenv = "1.2.2"
click = "8.3.1"
colorama = "0.4.6"
greenlet = "3.3.2"
typing_extensions = "4.15.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"